--- a/WebService/Views/Default/Index.cshtml
+++ b/WebService/Views/Default/Index.cshtml
@@ -7,7 +7,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
+    <title>Api base</title>
 </head>
 <body>
     <div style="margin: 50px auto; width: 300px;"> 
